syntax = "proto3";

package AutoFuzz;

message FuzzArgsProfile {
  bytes fuzzvar0 = 1;
}

